--- a/index.html
+++ b/index.html
@@ -2,112 +2,238 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Comigo</title>
   </head>
   <body>
-    <img src="assets/logo/comigo-logo-black.png" alt="comigo black logo" width="140" height="26">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Our Solutions</a>
+    <header class="header">
+      <img src="assets/logo/comigo-logo-black.png" alt="comigo black logo" width="140" height="26">
+      <nav class="main-menu">
         <ul>
-          <li><a href="#">EI CLOUD</a>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our Solutions</a>
             <ul>
-              <li><a href="#">EIˣ</a></li>
-              <li><a href="#">EI MIND</a></li>
+              <li><a href="#">EI CLOUD</a>
+                <ul>
+                  <li><a href="#">EIˣ</a></li>
+                  <li><a href="#">EI MIND</a></li>
+                </ul>
+              </li>
+              <li><a href="#">EI MIDDLEWARE</a>
+                <ul>
+                  <li><a href="#">ANDROID</a></li>
+                  <li><a href="#">COMIGO WATCHAPP™ APPLICATION</a></li>
+                </ul>
+              </li>
+              <li><a href="#">ANDROID STB</a></li>
             </ul>
           </li>
-          <li><a href="#">EI MIDDLEWARE</a>
+          <li><a href="#">Partners</a></li>
+          <li><a href="#">Industry Insights</a>
             <ul>
-              <li><a href="#">ANDROID</a></li>
-              <li><a href="#">COMIGO WATCHAPP&#8482 APPLICATION</a></li>
+              <li><a href="#">MEDIA ROOMS</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">INDUSTRY EVENTS</a></li>
             </ul>
           </li>
-          <li><a href="#">ANDROID STB</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
-      </li>
-      <li><a href="#">Partners</a></li>
-      <li><a href="#">Industry Insights</a>
+      </nav>
+    </header>
+    <main>
+      <section class="schedule-a-demo">
+        <h1>Make your OTT shine with the Experience Intelligence Cloud</h1>
+        <a href="#">SCHEDULE A DEMO</a>
+      </section>
+      <article class="why-comigo"><h2>WHY COMIGO?</h2>
+        <h4>Creating a TV that understands, with automatic metadata enrichment and Artificial
+          Intelligence (AI)</h4>
+        <a href="#">LEARN MORE</a>
+      </article>
+      <section class="engagement">
+        <h3>ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE
+          with highly-relevant contextual</h3>
         <ul>
-          <li><a href="#">MEDIA ROOMS</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">INDUSTRY EVENTS</a></li>
+          <li>
+            <h4>PEDIA</h4>
+            <figure>
+              <img src="assets/services/pedia.png" alt="pedia picture" width="344" height="469">
+              <video src="assets/videos/video-soccer_2.mp4" autoplay loop></video>
+              <figcaption>Drive stickiness by enriching content with contextual data from external
+                sources
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <h4>PARTICIPATION</h4>
+            <figure>
+              <img src="assets/services/participation.png" alt="participation picture" width="486"
+                   height="229">
+              <video src="assets/videos/video-action-thriller_2.mp4" autoplay loop></video>
+              <figcaption>Engage viewers and increase content spread through data-driven social
+                features
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <h4>DISCOVERY</h4>
+            <figure>
+              <img src="assets/services/discovery.png" alt="discovery picture" width="490"
+                   height="387">
+              <video src="assets/videos/video-army-helicopters.mp4" autoplay loop></video>
+              <figcaption>Offer personalised content with contextualised search, menu and
+                recommendations
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <h4>COMMERCE</h4>
+            <figure>
+              <img src="assets/services/commerce.png" alt="commerce picture" width="360"
+                   height="421">
+              <video src="assets/videos/video-city-3d-war_2.mp4" autoplay loop></video>
+              <figcaption>Create new revenue engines through contextual shopping services
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <h4>ADVERTISING</h4>
+            <figure>
+              <img src="assets/services/cars.png" alt="advertising picture" width="445"
+                   height="389">
+              <video src="assets/videos/video-car-drive_2.mp4" autoplay loop></video>
+              <figcaption>Offer ultra-targeted measurable advertising with advanced campaign
+                analytics
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <h4>CUSTOMIZE</h4>
+            <figure>
+              <img src="assets/services/customize.png" alt="customize picture" width="323"
+                   height="364">
+              <video src="assets/videos/video-kids-on-sofa_2.mp4" autoplay loop></video>
+              <figcaption>Quickly launch new, unique services based on our open SDK</figcaption>
+            </figure>
+          </li>
         </ul>
-      </li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">contact</a></li>
-    </ul>
-
-    <h1>Make your OTT shine with the Experience Intelligence Cloud</h1>
-    <a href="#">SCHEDULE A DEMO</a>
-    <h2>WHY COMIGO?</h2>
-    <h4>Creating a TV that understands, with automatic metadata enrichment and Artificial
-      Intelligence (AI)</h4>
-    <a href="#">LEARN MORE</a>
-
-    <h3>ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE
-      with highly-relevant contextual</h3>
-    <ul>
-      <li>
-        <h4>PEDIA</h4>
-        <figure>
-          <img src="assets/services/pedia.png" alt="pedia picture" width="344" height="469">
-          <video src="assets/videos/video-soccer_2.mp4" autoplay loop></video>
-          <figcaption>Drive stickiness by enriching content with contextual data from external
-            sources
-          </figcaption>
-        </figure>
-      </li>
-      <li>
-        <h4>PARTICIPATION</h4>
-        <figure>
-          <img src="assets/services/participation.png" alt="participation picture" width="486"
-               height="229">
-          <video src="assets/videos/video-action-thriller_2.mp4" autoplay loop></video>
-          <figcaption>Engage viewers and increase content spread through data-driven social
-            features
-          </figcaption>
-        </figure>
-      </li>
-      <li>
-        <h4>DISCOVERY</h4>
-        <figure>
-          <img src="assets/services/discovery.png" alt="discovery picture" width="490" height="387">
-          <video src="assets/videos/video-army-helicopters.mp4" autoplay loop></video>
-          <figcaption>Offer personalised content with contextualised search, menu and
-            recommendations
-          </figcaption>
-        </figure>
-      </li>
-      <li>
-        <h4>COMMERCE</h4>
-        <figure>
-          <img src="assets/services/commerce.png" alt="commerce picture" width="360" height="421">
-          <video src="assets/videos/video-city-3d-war_2.mp4" autoplay loop></video>
-          <figcaption>Create new revenue engines through contextual shopping services</figcaption>
-        </figure>
-      </li>
-      <li>
-        <h4>ADVERTISING</h4>
-        <figure>
-          <img src="assets/services/cars.png" alt="advertising picture" width="445" height="389">
-          <video src="assets/videos/video-car-drive_2.mp4" autoplay loop></video>
-          <figcaption>Offer ultra-targeted measurable advertising with advanced campaign analytics
-          </figcaption>
-        </figure>
-      </li>
-      <li>
-        <h4>CUSTOMIZE</h4>
-        <figure>
-          <img src="assets/services/customize.png" alt="customize picture" width="323" height="364">
-          <video src="assets/videos/video-kids-on-sofa_2.mp4" autoplay loop></video>
-          <figcaption>Quickly launch new, unique services based on our open SDK</figcaption>
-        </figure>
-      </li>
-    </ul>
-
-
+      </section>
+      <section class="tv-service">
+        <img src="assets/other/ic-ei-cloud-brain-hp.png" alt="brain.jpg" width="250" height="198">
+        <h3>ENHANCE ANY TV SERVICE</h3>
+        <p>Comigo Experience Intelligence (EI)</p>
+        <a href="#">ENHANCE YOUR OTT TV</a>
+      </section>
+      <section class="android">
+        <img src="assets/other/ic-stb-screens.png" alt="screens picture" width="418" height="419">
+        <h3>DEPLOY BEST IN CLASS TV SERVICE</h3>
+        <p><em>Comigo's</em> Android-based STB (HW&MW)</p>
+        <a href="#">DEPLOY ON ANDROID</a>
+      </section>
+      <section class="experience">
+        <img src="assets/other/screen_whos_on.jpg" alt="who/'s on">
+        <h3>YOUR CONTENT, COMIGO'S UNIQUE EXPERIENCE</h3>
+        <p>Intelligence-based contextual WatchApp™ Applications.</p>
+        <a href="#">LEARN MORE</a>
+      </section>
+      <a href="#">
+        <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture"
+             width="574" height="293">
+      </a>
+      <ul class="social-networks">
+        <li><a href="#">FACEBOOK</a></li>
+        <li><a href="#">TWITTER</a></li>
+        <li><a href="#">LINKED IN</a></li>
+        <li><a href="#">YOUTUBE</a></li>
+      </ul>
+      <a href="#">
+        <h3>SCHEDULE A DEMO</h3>
+        <img src="assets/other/screen_demo.jpg" alt="schedule a demo">
+      </a>
+    </main>
+    <aside class="learn-more">
+      <h3>LEARN MORE ABOUT COMIGO</h3>
+      <a href="#">
+        <img src="assets/other/lnr-download.svg" alt="download">
+        <p>Download our brochure learn more</p>
+      </a>
+    </aside>
+    <aside class="blog">
+      <h3>OUR BLOG</h3>
+      <p>THE INSIDE VIEW</p>
+      <ul>
+        <li>
+          <a href="#">
+            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can
+              Find out how at <em>IBC2016</em></p>
+            <p>Read More</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>What We Learned at <em>TV Connect 2016</em></p>
+            <p>Read More</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Big Data Meets TV - The Next Phase In the TV Experience Evolution</p>
+            <p>Read More</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Comigo Will Bring an Infusion of Internet Power and Contextual TV to Life at
+              TV Connect 2016</p>
+            <p>Read More</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Quality, Set-Top-Boxes, Crappy Cars and Caveat Emptor</p>
+            <p>Read More</p>
+          </a>
+        </li>
+      </ul>
+    </aside>
+    <footer class="sub-menus">
+      <img src="assets/logo/comigo-logo-white.png" alt="comigo white logo" width="138" height="24">
+      <nav class="main-menu-minimize">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our Solutions</a>
+            <ul>
+              <li><a href="#">EI CLOUD</a></li>
+              <li><a href="#">EI MIDDLEWARE</a></li>
+              <li><a href="#">ANDROID STB</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Partners</a></li>
+          <li><a href="#">Industry Insights</a>
+            <ul>
+              <li><a href="#">MEDIA ROOMS</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">INDUSTRY EVENTS</a></li>
+            </ul>
+          </li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+      <img src="assets/logo/comigo-logo-white.png" alt="Comigo Logo White" width="138" height="24">
+      <div>
+        <p>All Rights Reserved Comigo Ⓒ 2016</p>
+        <a href="#">Terms of Use</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Privacy Policy</a>
+        <p>Developed By: <a href="#">FATLADY</a></p>
+        <ul class="social-networks">
+          <li><a href="#">FACEBOOK</a></li>
+          <li><a href="#">TWITTER</a></li>
+          <li><a href="#">LINKED IN</a></li>
+          <li><a href="#">YOUTUBE</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
