added a footer to the main clause

--- a/index.html
+++ b/index.html
@@ -136,20 +136,22 @@
         <p>Intelligence-based contextual WatchApp™ Applications.</p>
         <a href="#">LEARN MORE</a>
       </section>
-      <a href="#">
-        <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture"
-             width="574" height="293">
-      </a>
-      <ul class="social-networks">
-        <li><a href="#">FACEBOOK</a></li>
-        <li><a href="#">TWITTER</a></li>
-        <li><a href="#">LINKED IN</a></li>
-        <li><a href="#">YOUTUBE</a></li>
-      </ul>
-      <a href="#">
-        <h3>SCHEDULE A DEMO</h3>
-        <img src="assets/other/screen_demo.jpg" alt="schedule a demo">
-      </a>
+      <footer class="schedules">
+        <a href="#">
+          <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture"
+               width="574" height="293">
+        </a>
+        <ul class="social-networks">
+          <li><a href="#">FACEBOOK</a></li>
+          <li><a href="#">TWITTER</a></li>
+          <li><a href="#">LINKED IN</a></li>
+          <li><a href="#">YOUTUBE</a></li>
+        </ul>
+        <a href="#">
+          <h3>SCHEDULE A DEMO</h3>
+          <img src="assets/other/screen_demo.jpg" alt="schedule a demo">
+        </a>
+      </footer>
     </main>
     <aside class="learn-more">
       <h3>LEARN MORE ABOUT COMIGO</h3>
@@ -184,7 +186,7 @@
         <li>
           <a href="#">
             <p>Comigo Will Bring an Infusion of Internet Power and Contextual TV to Life at
-              TV Connect 2016</p>
+              <em>TV Connect 2016</em></p>
             <p>Read More</p>
           </a>
         </li>
