--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header class="header">
-      <img src="assets/logo/comigo-logo-black.png" alt="comigo black logo" width="140" height="26">
+      <a href="#">
+        <img src="assets/logo/comigo-logo-black.png" alt="comigo black logo" width="140" height="26">
+      </a>
       <nav class="main-menu">
         <ul>
           <li><a href="#">Home</a></li>
@@ -46,75 +48,59 @@
         <a href="#">SCHEDULE A DEMO</a>
       </section>
       <article class="why-comigo"><h2>WHY COMIGO?</h2>
-        <h4>Creating a TV that understands, with automatic metadata enrichment and Artificial
-          Intelligence (AI)</h4>
+        <h4>Creating a TV that understands, with automatic metadata enrichment and Artificial sIntelligence (AI)</h4>
         <a href="#">LEARN MORE</a>
       </article>
       <section class="engagement">
-        <h3>ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE
-          with highly-relevant contextual</h3>
+        <h3>ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE with highly-relevant contextual</h3>
         <ul>
           <li>
             <h4>PEDIA</h4>
             <figure>
               <img src="assets/services/pedia.png" alt="pedia picture" width="344" height="469">
-              <video src="assets/videos/video-soccer_2.mp4" autoplay loop></video>
-              <figcaption>Drive stickiness by enriching content with contextual data from external
-                sources
-              </figcaption>
+              <figcaption>Drive stickiness by enriching content with contextual data from external sources</figcaption>
             </figure>
+            <video src="assets/videos/video-soccer_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>PARTICIPATION</h4>
             <figure>
-              <img src="assets/services/participation.png" alt="participation picture" width="486"
-                   height="229">
-              <video src="assets/videos/video-action-thriller_2.mp4" autoplay loop></video>
-              <figcaption>Engage viewers and increase content spread through data-driven social
-                features
-              </figcaption>
+              <img src="assets/services/participation.png" alt="participation picture" width="486" height="229">
+              <figcaption>Engage viewers and increase content spread through data-driven social features</figcaption>
             </figure>
+            <video src="assets/videos/video-action-thriller_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>DISCOVERY</h4>
             <figure>
-              <img src="assets/services/discovery.png" alt="discovery picture" width="490"
-                   height="387">
-              <video src="assets/videos/video-army-helicopters.mp4" autoplay loop></video>
-              <figcaption>Offer personalised content with contextualised search, menu and
-                recommendations
-              </figcaption>
+              <img src="assets/services/discovery.png" alt="discovery picture" width="490" height="387">
+              <figcaption>Offer personalised content with contextualised search, menu and recommendations</figcaption>
             </figure>
+            <video src="assets/videos/video-army-helicopters.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>COMMERCE</h4>
             <figure>
-              <img src="assets/services/commerce.png" alt="commerce picture" width="360"
-                   height="421">
-              <video src="assets/videos/video-city-3d-war_2.mp4" autoplay loop></video>
-              <figcaption>Create new revenue engines through contextual shopping services
-              </figcaption>
+              <img src="assets/services/commerce.png" alt="commerce picture" width="360" height="421">
+              <figcaption>Create new revenue engines through contextual shopping services</figcaption>
             </figure>
+            <video src="assets/videos/video-city-3d-war_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>ADVERTISING</h4>
             <figure>
-              <img src="assets/services/cars.png" alt="advertising picture" width="445"
-                   height="389">
-              <video src="assets/videos/video-car-drive_2.mp4" autoplay loop></video>
-              <figcaption>Offer ultra-targeted measurable advertising with advanced campaign
-                analytics
-              </figcaption>
+              <img src="assets/services/cars.png" alt="advertising picture" width="445" height="389">
+              <figcaption>Offer ultra-targeted measurable advertising with advanced campaign analytics</figcaption>
             </figure>
+            <video src="assets/videos/video-car-drive_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>CUSTOMIZE</h4>
             <figure>
-              <img src="assets/services/customize.png" alt="customize picture" width="323"
-                   height="364">
-              <video src="assets/videos/video-kids-on-sofa_2.mp4" autoplay loop></video>
+              <img src="assets/services/customize.png" alt="customize picture" width="323" height="364">
               <figcaption>Quickly launch new, unique services based on our open SDK</figcaption>
             </figure>
+            <video src="assets/videos/video-kids-on-sofa_2.mp4" autoplay loop></video>
           </li>
         </ul>
       </section>
@@ -138,8 +124,7 @@
       </section>
       <footer class="schedules">
         <a href="#">
-          <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture"
-               width="574" height="293">
+          <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture" width="574" height="293">
         </a>
         <ul class="social-networks">
           <li><a href="#">FACEBOOK</a></li>
@@ -162,44 +147,45 @@
     </aside>
     <aside class="blog">
       <h3>OUR BLOG</h3>
-      <p>THE INSIDE VIEW</p>
+      <span>THE INSIDE VIEW</span>
       <ul>
         <li>
           <a href="#">
-            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can
-              Find out how at <em>IBC2016</em></p>
-            <p>Read More</p>
+            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can Find out how at <em>
+              IBC2016</em></p>
+            <span>Read More</span>
           </a>
         </li>
         <li>
           <a href="#">
             <p>What We Learned at <em>TV Connect 2016</em></p>
-            <p>Read More</p>
+            <span>Read More</span>
           </a>
         </li>
         <li>
           <a href="#">
             <p>Big Data Meets TV - The Next Phase In the TV Experience Evolution</p>
-            <p>Read More</p>
+            <span>Read More</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <p>Comigo Will Bring an Infusion of Internet Power and Contextual TV to Life at
-              <em>TV Connect 2016</em></p>
-            <p>Read More</p>
+            <p>Comigo Will Bring an Infusion of Internet Power and Contextual TV to Life at <em>TV Connect 2016</em></p>
+            <span>Read More</span>
           </a>
         </li>
         <li>
           <a href="#">
             <p>Quality, Set-Top-Boxes, Crappy Cars and Caveat Emptor</p>
-            <p>Read More</p>
+            <span>Read More</span>
           </a>
         </li>
       </ul>
     </aside>
     <footer class="sub-menus">
-      <img src="assets/logo/comigo-logo-white.png" alt="comigo white logo" width="138" height="24">
+      <a href="#">
+        <img src="assets/logo/comigo-logo-white.png" alt="Comigo Logo White" width="138" height="24">
+      </a>
       <nav class="main-menu-minimize">
         <ul>
           <li><a href="#">Home</a></li>
@@ -222,9 +208,8 @@
           <li><a href="#">contact</a></li>
         </ul>
       </nav>
-      <img src="assets/logo/comigo-logo-white.png" alt="Comigo Logo White" width="138" height="24">
       <div>
-        <p>All Rights Reserved Comigo Ⓒ 2016</p>
+        <small>All Rights Reserved Comigo Ⓒ 2016</small>
         <a href="#">Terms of Use</a>
         <a href="#">Contact Us</a>
         <a href="#">Privacy Policy</a>
