refactoring comigo html page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <li><a href="#">EI MIDDLEWARE</a>
                 <ul>
                   <li><a href="#">ANDROID</a></li>
-                  <li><a href="#">COMIGO WATCHAPP™ APPLICATION</a></li>
+                  <li><a href="#">COMIGO WATCHAPP&#8482; APPLICATION</a></li>
                 </ul>
               </li>
               <li><a href="#">ANDROID STB</a></li>
@@ -119,10 +119,15 @@
       <section class="experience">
         <img src="assets/other/screen_whos_on.jpg" alt="who/'s on">
         <h3>YOUR CONTENT, COMIGO'S UNIQUE EXPERIENCE</h3>
-        <p>Intelligence-based contextual WatchApp™ Applications.</p>
+        <p>Intelligence-based contextual WatchApp&#8482; Applications.</p>
         <a href="#">LEARN MORE</a>
       </section>
       <footer class="schedules">
+        <h3>LEARN MORE ABOUT COMIGO</h3>
+        <a href="#">
+          <img src="assets/other/lnr-download.svg" alt="download">
+          <p>Download our brochure learn more</p>
+        </a>
         <a href="#">
           <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture" width="574" height="293">
         </a>
@@ -138,21 +143,14 @@
         </a>
       </footer>
     </main>
-    <aside class="learn-more">
-      <h3>LEARN MORE ABOUT COMIGO</h3>
-      <a href="#">
-        <img src="assets/other/lnr-download.svg" alt="download">
-        <p>Download our brochure learn more</p>
-      </a>
-    </aside>
     <aside class="blog">
       <h3>OUR BLOG</h3>
       <span>THE INSIDE VIEW</span>
       <ul>
         <li>
           <a href="#">
-            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can Find out how at <em>
-              IBC2016</em></p>
+            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can Find out how at
+              <abbr title="International Broadcasting Convention 2016">IBC2016</abbr></p>
             <span>Read More</span>
           </a>
         </li>
@@ -209,11 +207,11 @@
         </ul>
       </nav>
       <div>
-        <small>All Rights Reserved Comigo Ⓒ 2016</small>
+        <small>All Rights Reserved Comigo &#169; 2016</small>
         <a href="#">Terms of Use</a>
         <a href="#">Contact Us</a>
         <a href="#">Privacy Policy</a>
-        <p>Developed By: <a href="#">FATLADY</a></p>
+        <address class="author"><p>Developed By: <a href="#">FATLADY</a></p></address>
         <ul class="social-networks">
           <li><a href="#">FACEBOOK</a></li>
           <li><a href="#">TWITTER</a></li>
