--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Comigo</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <header class="header">
