--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Comigo</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header class="header">
@@ -11,7 +12,7 @@
         <img src="assets/logo/comigo-logo-black.png" alt="comigo black logo" width="140" height="26">
       </a>
       <nav class="main-menu">
-        <ul>
+        <ul class="mm-first">
           <li><a href="#">Home</a></li>
           <li><a href="#">Our Solutions</a>
             <ul>
@@ -186,10 +187,10 @@
         <img src="assets/logo/comigo-logo-white.png" alt="Comigo Logo White" width="138" height="24">
       </a>
       <nav class="main-menu-minimize">
-        <ul>
+        <ul class="mmm-first">
           <li><a href="#">Home</a></li>
           <li><a href="#">Our Solutions</a>
-            <ul>
+            <ul class="mmm-second">
               <li><a href="#">EI CLOUD</a></li>
               <li><a href="#">EI MIDDLEWARE</a></li>
               <li><a href="#">ANDROID STB</a></li>
@@ -197,7 +198,7 @@
           </li>
           <li><a href="#">Partners</a></li>
           <li><a href="#">Industry Insights</a>
-            <ul>
+            <ul class="mmm-second">
               <li><a href="#">MEDIA ROOMS</a></li>
               <li><a href="#">BLOG</a></li>
               <li><a href="#">INDUSTRY EVENTS</a></li>
@@ -207,7 +208,7 @@
           <li><a href="#">contact</a></li>
         </ul>
       </nav>
-      <div>
+      <div class="lower-footer">
         <small>All Rights Reserved Comigo &#169; 2016</small>
         <a href="#">Terms of Use</a>
         <a href="#">Contact Us</a>
