added blog css and pictures

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Comigo</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -107,7 +108,7 @@
         </ul>
       </section>
       <section class="tv-service">
-        <img src="assets/other/ic-ei-cloud-brain-hp.png" alt="brain.jpg" width="250" height="198">
+        <!--<img src="assets/other/ic-ei-cloud-brain-hp.png" alt="brain.jpg" width="250" height="198">-->
         <h3>ENHANCE ANY TV SERVICE</h3>
         <p>Comigo Experience Intelligence (EI)</p>
         <a href="#">ENHANCE YOUR OTT TV</a>
@@ -146,8 +147,10 @@
       </footer>
     </main>
     <aside class="blog">
-      <h3>OUR BLOG</h3>
-      <span>THE INSIDE VIEW</span>
+      <div class="blog-text">
+        <h3>OUR BLOG</h3>
+        <span>THE INSIDE VIEW</span>
+      </div>
       <ul>
         <li>
           <a href="#">
@@ -218,7 +221,7 @@
           <li><a href="#">FACEBOOK</a></li>
           <li><a href="#">TWITTER</a></li>
           <li><a href="#">LINKED IN</a></li>
-          <li><a href="#">YOUTUBE </a></li>
+          <li><a href="#">YOUTUBE</a></li>
         </ul>
       </div>
     </footer>
