--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
           <p>Comigo Experience Intelligence (EI)</p>
           <a href="#" class="round-btn inverse">ENHANCE YOUR OTT TV</a>
         </div>
-      </section>
+      </section
+      >
       <section class="android rounded-link">
         <div class="android-text">
           <h3>DEPLOY BEST IN CLASS TV SERVICE</h3>
@@ -160,36 +161,37 @@
     </main>
     <aside class="blog">
       <div class="blog-text">
-        <h3>OUR BLOG</h3>
-        <span>THE INSIDE VIEW</span>
-      </div><!--
-      --><ul class="list-reset">
-           <li>
-          <a href="#">
-            <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can Find out how at
-              <abbr title="International Broadcasting Convention 2016">IBC2016</abbr></p>
-            <span>Read More</span>
-          </a>
-        </li><!--
-        --><li>
+        <div class="blog-text-wrapper">
+          <h3>OUR BLOG</h3>
+          <span>THE INSIDE VIEW</span>
+        </div>
+      </div
+      ><ul class="list-reset">
+        <li><a href="#">
+          <p><em>Comigo's</em> Experience Intelligence Products Redefine TV - And you can Find out how at
+            <abbr title="International Broadcasting Convention 2016">IBC2016</abbr></p>
+          <span>Read More</span>
+        </a>
+        </li
+        ><li>
           <a href="#">
             <p>What We Learned at <em>TV Connect 2016</em></p>
             <span>Read More</span>
           </a>
-        </li><!--
-        --><li>
+        </li
+        ><li>
           <a href="#">
             <p>Big Data Meets TV - The Next Phase In the TV Experience Evolution</p>
             <span>Read More</span>
           </a>
-        </li><!--
-        --><li>
+        </li
+        ><li>
           <a href="#">
             <p>Comigo Will Bring an Infusion of Internet Power and Contextual TV to Life at <em>TV Connect 2016</em></p>
             <span>Read More</span>
           </a>
-        </li><!--
-        --><li>
+        </li
+        ><li>
           <a href="#">
             <p>Quality, Set-Top-Boxes, Crappy Cars and Caveat Emptor</p>
             <span>Read More</span>
